kubernetes/apps/kube-system/cilium/gateway/gateway-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-56kbps
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-halfduplex
      protocol: HTTPS
      port: 443
      hostname: "*.halfduplex.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: halfduplex-io-production-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-halfduplex-apex
      protocol: HTTPS
      port: 443
      hostname: "halfduplex.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: halfduplex-io-production-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-56kbps-apex
      protocol: HTTPS
      port: 443
      hostname: "${SECRET_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-flux
      protocol: HTTPS
      port: 443
      hostname: "flux-webhook.${SECRET_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
      allowedRoutes:
        namespaces:
          from: All
  # Removing static IP to let Cilium allocate dynamically
  # addresses:
  #   - type: IPAddress
  #     value: ${SECRET_CILIUM_EXTERNAL_VIP}
