kubernetes/apps/kube-system/cilium/gateway/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: network
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-56kbps
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-halfduplex
      protocol: HTTPS
      port: 443
      hostname: "*.halfduplex.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: halfduplex-io-production-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-halfduplex-apex
      protocol: HTTPS
      port: 443
      hostname: "halfduplex.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: halfduplex-io-production-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-56kbps-apex
      protocol: HTTPS
      port: 443
      hostname: "${SECRET_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - type: IPAddress
      value: ${SECRET_CILIUM_INTERNAL_VIP}
